--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="snake.css">
 </head>
 <body>
+  <h1>Click ⬆ and ⬇ to move the snake</h1>
   <div id="gameContainer">
     <canvas id="gameBoard" width="500" height="500"></canvas>
     <div id="scoreText">0</div>
